# ifc-lite-geometry-cat

./: Cargo.toml  README.md
.github/workflows/: docs.yml
src/: error.rs  extrusion.rs  lib.rs  mesh.rs  profile.rs  triangulation.rs
